--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,7 +12,22 @@ html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
+    height: 100%;
 }
+
+body {
+    margin: 0;
+    height: 100%;
+    padding-top: 70px;
+    background: #4CA1AF; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #4CA1AF , #C4E0E5);
+    background: linear-gradient(to left, #4CA1AF , #C4E0E5);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+}
+
+
 
 /*
  * Remove text-shadow in selection highlight:
@@ -38,6 +53,20 @@ hr {
     border-top: 1px solid #ccc;
     margin: 1em 0;
     padding: 0;
+}
+
+.jumbotron-extender{
+    text-align: center;
+
+}
+
+.jumbotron-extender :hover{
+    background-color: rgb(85, 85, 85);
+
+}
+
+#main-body{
+    display: none;
 }
 
 /*
@@ -189,8 +218,8 @@ textarea {
 }
 
 @media print,
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
 }
 
@@ -272,3 +301,4 @@ textarea {
         page-break-after: avoid;
     }
 }
+
