--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ html {
 body {
     margin: 0;
     height: 100%;
-    padding-top: 70px;
+    padding-top: 50px;
     background: #999999; /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #999999 , #cccccc);
     background: linear-gradient(to left, #999999 , #cccccc);
@@ -70,8 +70,8 @@ hr {
     border-top: 1px solid #ccc;
     margin: 1em 0;
     padding: 0;
-    color: #000000;
-    background-color: #000000;
+    color: #ffffff;
+    background-color: #ffffff;
 }
 
 #header-image{
@@ -89,6 +89,14 @@ hr {
     font-size: 0.8em;
 }
 
+#navMenu{
+    margin-bottom: 0;
+    z-index: 1;
+}
+
+.container-fluid{
+    width: 90%;
+}
 .panel-heading{
     font-family: 'Itim', cursive;
     font-size: 2em;
@@ -99,6 +107,10 @@ hr {
     font-size: 1.3em;
     text-align: left;
     padding: 2em;
+}
+
+.panel-primary{
+    z-index: 2;
 }
 
 .jumbotron{
@@ -127,18 +139,19 @@ hr {
 }
 
 .bg-2{
-    background: #999999; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #999999 , #cccccc);
-    background: linear-gradient(to left, #999999 , #cccccc);
+    background: #2f2f2f; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #2f2f2f , #2f2f2f);
+    background: linear-gradient(to left, #2f2f2f , #2f2f2f);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    opacity: 0.95;
     color: #000000;
 }
 
 .bg-3{
-    background: #999999; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #999999 , #cccccc);
-    background: linear-gradient(to left, #999999 , #cccccc);
+    background: #2f2f2f; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #2f2f2f , #2f2f2f);
+    background: linear-gradient(to left, #2f2f2f , #2f2f2f);
     background-repeat: no-repeat;
     background-attachment: fixed;
     color: #000000;
@@ -146,11 +159,12 @@ hr {
 
 .bg-4 {
     background: #2f2f2f; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #2f2f2f , #2f2f2f);
-    background: linear-gradient(to left, #2f2f2f , #2f2f2f);
+    background: -webkit-linear-gradient(to left, #0f0f0f , #0f0f0f);
+    background: linear-gradient(to left, #0f0f0f , #0f0f0f);
     background-repeat: no-repeat;
     background-attachment: fixed;
     color: #ffffff;
+    width: 100%;
 }
 
 #atos-image{
