bug fixes + design

--- a/css/main.css
+++ b/css/main.css
@@ -64,12 +64,11 @@ p {
  */
 
 hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
     margin: 1em 0;
     padding: 0;
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.8));
     color: #ffffff;
     background-color: #ffffff;
 }
